fixed spacing issues in ttext of drill-3

--- a/html-css-2/drill-3/index.css
+++ b/html-css-2/drill-3/index.css
@@ -18,7 +18,7 @@ body {
 }
 
 p {
-    margin: 60px 60px 60px 60px;
+    margin: 60px 60px;
     text-indent: 15px;
 }
 
